# bert-from-scratch

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Tiltfile  bert.py  cloudbuild.yaml  pyproject.toml  tests.yaml
docs/: README.md
helm/: Chart.yaml
helm/templates/: dev.yaml  test.yaml
src/: main.py  model.py  train.py
