[tool.poetry]
name = "tensor-ventures"
version = "0.1.0"
description = ""
authors = ["Grantham Taylor"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.0"
torchtyping = "^0.1.4"
numpy = "^1.23.1"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
